--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-html{
+html {
     scroll-behavior: smooth;
 }
+
 body {
     font-family: Arial;
     height: 100%;
@@ -16,6 +17,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
+
 main {
     max-width: 1200px;
     background-color: #E0E0E0;
@@ -27,6 +29,7 @@ main {
     margin-right: auto;
     margin-top: 80px;
 }
+
 h1 {
     text-align: center;
     color: white;
@@ -35,6 +38,7 @@ h1 {
     margin-right: auto;
     grid-column: 2;
 }
+
 .logo {
     padding: 20px;
     filter: invert(100%);
@@ -42,10 +46,11 @@ h1 {
     grid-column: 1;
 
 }
+
 .some {
     /*float: right;*/
     grid-column: 3;
-    justify-self:end;
+    justify-self: end;
     align-self: center;
 }
 
@@ -61,9 +66,11 @@ nav {
     box-shadow: 0px 3px 19px 6px rgba(0, 0, 0, 0.81);
     z-index: 10;
 }
-#navbar{
+
+#navbar {
     grid-column: 1 / 4;
 }
+
 .sticky {
     position: fixed;
     top: 0;
@@ -75,6 +82,7 @@ ul {
     margin-left: auto;
     margin-right: auto;
 }
+
 li {
     list-style: none;
     margin: 0 2vw;
@@ -88,12 +96,14 @@ li {
     padding: 16px;
 
 }
+
 .menu_selected {
     font-weight: bold;
     background-color: #0a0c19;
     color: white;
     text-shadow: 1px 1px 1px black;
 }
+
 .menu_other:hover {
     text-shadow: 1px 1px 1px grey;
 }
@@ -114,6 +124,7 @@ li {
     display: flex;
     align-items: center;
 }
+
 .submenu {
     margin-left: auto;
     margin-right: auto;
@@ -134,6 +145,7 @@ a {
     background-color: #0a0c19A5;
     transition: .3s linear;
 }
+
 a:hover {
     text-decoration: underline;
     background-color: #0a0c19;
@@ -146,6 +158,7 @@ section {
     grid-gap: 2rem;
     padding: 30px;
 }
+
 h2 {
     background-color: #0a0c19;
     color: white;
@@ -154,13 +167,14 @@ h2 {
     font-size: 30px;
     font-weight: 900;
     grid-column: 1 / -1;
-   /*text-align: center;*/
+    /*text-align: center;*/
 
 }
 
 h3 {
     text-align: center;
 }
+
 .course {
     display: flex;
     flex-flow: column;
@@ -172,28 +186,74 @@ h3 {
     box-shadow: 0px 3px 8px 2px rgba(0, 0, 0, 0.75);
     padding: 15px;
 }
+
 .short_description {
     grid-row: 2;
     text-align: center;
 }
 
-#arrow_btn {
-    border-style: none;
+.btn {
+
+    align-self: center;
     background-color: transparent;
+    font-size: 16px;
+    margin-top: 10px;
+    padding: 5px;
+    width: 150px;
+    background-color: #0a0c19;
+    color: white;
+    font-weight: 900;
+    cursor: pointer;
+    border: none;
+
+    -webkit-box-shadow: 0px 4px 5px -2px rgba(10, 12, 25, 1);
+    -moz-box-shadow: 0px 4px 5px -2px rgba(10, 12, 25, 1);
+    box-shadow: 0px 4px 5px -2px rgba(10, 12, 25, 1);
+
+
 }
-#arrow-up {
+
+.btn:hover {
+    background-color: #0a0c19A5
+}
+
+.hide {
     display: none;
 }
-#arrow {
-    display: inline;
+
+.modal-background {
+    position: fixed;
+    z-index: 10;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.7);
+
 }
-.arrow,
-.arrow-up {
+
+.modal-content {
+    background-color: #fefefe;
+    border: 1px solid #7c1f17;
+    margin: 1em;
+    padding: 2em;
+
+}
+
+.close {
+    color: #aaa;
+    font-size: 30px;
+    font-weight: bold;
+    float: right;
     cursor: pointer;
 }
-.arrow:hover,
-.arrow-up:hover {
-    filter: opacity(50%);
+
+.close:hover {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+    z-index: 10;
 }
 
 #long_description {
@@ -212,6 +272,7 @@ h3 {
     margin: 0px;
     margin-bottom: 20px;
 }
+
 .soldout {
     text-align: center;
     font-weight: bold;
@@ -219,6 +280,7 @@ h3 {
     display: none;
     /*color: red;*/
 }
+
 .soldout_course {
     filter: grayscale(100%);
 }
