making modal responsive

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ li {
     padding: 16px;
 
 }
+
 .menu_selected {
     font-weight: bold;
     background-color: #0a0c19;
@@ -144,6 +145,7 @@ a {
     background-color: #0a0c19A5;
     transition: .3s linear;
 }
+
 a:hover {
     text-decoration: underline;
     background-color: #0a0c19;
@@ -209,6 +211,7 @@ h3 {
 
 
 }
+
 .btn:hover {
     background-color: #0a0c19A5
 }
@@ -216,6 +219,7 @@ h3 {
 .hide {
     display: none;
 }
+
 .modal-background {
     position: fixed;
     z-index: 10;
@@ -226,6 +230,7 @@ h3 {
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.7);
 }
+
 .modal-content {
     width: 60%;
     background-color: #E0E0E0;
@@ -239,22 +244,26 @@ h3 {
     grid-template-columns: 1fr 1fr;
     column-gap: 20px;
 }
-.modal-name{
+
+.modal-name {
     grid-row: 1;
     font-weight: bold;
     font-size: 28px;
     text-shadow: 0px 0px 6px rgba(150, 150, 150, 1);
 }
-.modal-sdescription{
+
+.modal-sdescription {
     grid-row: 2;
     text-align: center;
     font-size: 20px;
 }
-.modal-ldescription{
+
+.modal-ldescription {
     grid-row: 3;
     text-align: justify;
 }
-.modal-image{
+
+.modal-image {
     grid-row: 1 / 7;
     grid-column: 2;
     -webkit-box-shadow: 0px 4px 5px -2px rgba(10, 12, 25, 1);
@@ -262,7 +271,8 @@ h3 {
     box-shadow: 0px 4px 5px -2px rgba(10, 12, 25, 1);
 
 }
-.modal-price{
+
+.modal-price {
     font-weight: bold;
     font-size: 19px;
     border: 2px solid black;
@@ -271,14 +281,16 @@ h3 {
     width: auto;
     text-align: center;
 }
-.modal-discount{
+
+.modal-discount {
     display: none;
     color: green;
     font-size: 20px;
     margin: 0;
     margin-top: 20px;
 }
-.modal-new_price{
+
+.modal-new_price {
     display: none;
     color: green;
     font-size: 25px;
@@ -288,17 +300,20 @@ h3 {
     margin: 0;
     margin-top: 5px;
 }
-.modal-soldout{
+
+.modal-soldout {
     display: none;
     grid-column: 1;
     font-weight: bold;
     text-align: center;
     font-size: 30px;
 }
-.modal-icons{
+
+.modal-icons {
     grid-column: 2;
     grid-row: 7;
     justify-self: center;
+    margin-top: 10px;
 }
 
 .close {
@@ -313,6 +328,7 @@ h3 {
 
 
 }
+
 .close:hover {
     color: black;
     text-decoration: none;
@@ -346,6 +362,7 @@ h3 {
     display: none;
     /*color: red;*/
 }
+
 .soldout_course {
     filter: grayscale(100%);
 }
@@ -388,4 +405,54 @@ img {
     margin: 30px 0px;
     display: none;
     font-weight: 900;
+}
+
+@media only screen and (max-width: 1000px) {
+    .modal-content {
+        width: 90%;
+        display: grid;
+        grid-template-columns: 1fr;
+
+    }
+
+    .modal-name {
+        grid-row: 1;
+    }
+
+    .modal-sdescription {
+        grid-row: 2;
+        text-align: center;
+        font-size: 20px;
+    }
+
+    .modal-image {
+        grid-row: 3;
+        grid-column: 1;
+    }
+
+    .modal-soldout {
+        grid-row: 4;
+    }
+
+    .modal-ldescription {
+        grid-row: 5;
+    }
+
+    .modal-price {
+        grid-row: 6;
+    }
+
+    .modal-discount {
+        grid-row: 7
+    }
+
+    .modal-new_price {
+        grid-row: 8
+    }
+
+    .modal-icons {
+        grid-column: 1;
+        grid-row: 9;
+        margin-top: 20px;
+    }
 }
