--- a/style.css
+++ b/style.css
@@ -407,7 +407,25 @@ img {
     font-weight: 900;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 850px) {
+    nav {
+        width: 100%;
+        height: 50px;
+        display: flex;
+
+    }
+
+    ul {
+        display: flex;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .submenu {
+        display: flex;
+        flex-direction: column;
+    }
+
     .modal-content {
         width: 90%;
         display: grid;
